--- a/NYT Processing.ipynb
+++ b/NYT Processing.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import glob"
+    "import glob\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +185,7 @@
        "[386341 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -228,13 +229,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "df.to_csv(output_dir+'NYT_ALL.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>27663</td>\n",
+       "      <td>2017-10-10 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>248475</td>\n",
+       "      <td>2019-02-07 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>248800</td>\n",
+       "      <td>2019-02-07 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>247958</td>\n",
+       "      <td>2019-02-07 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>247868</td>\n",
+       "      <td>2019-02-07 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>232561</td>\n",
+       "      <td>2019-08-29 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>232555</td>\n",
+       "      <td>2019-08-29 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>232562</td>\n",
+       "      <td>2019-08-29 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>232243</td>\n",
+       "      <td>2019-08-29 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>232028</td>\n",
+       "      <td>2019-08-29 00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>335 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            Date title\n",
+       "27663  2017-10-10 00:00:00+00:00   NaN\n",
+       "248475 2019-02-07 00:00:00+00:00   NaN\n",
+       "248800 2019-02-07 00:00:00+00:00   NaN\n",
+       "247958 2019-02-07 00:00:00+00:00   NaN\n",
+       "247868 2019-02-07 00:00:00+00:00   NaN\n",
+       "...                          ...   ...\n",
+       "232561 2019-08-29 00:00:00+00:00   NaN\n",
+       "232555 2019-08-29 00:00:00+00:00   NaN\n",
+       "232562 2019-08-29 00:00:00+00:00   NaN\n",
+       "232243 2019-08-29 00:00:00+00:00   NaN\n",
+       "232028 2019-08-29 00:00:00+00:00   NaN\n",
+       "\n",
+       "[335 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['title'] != df['title']]"
    ]
   },
   {
