--- a/Output Gen.ipynb
+++ b/Output Gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -69,24 +69,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for stock in stocks:\n",
     "    df = pd.read_csv(stock_dir+stock+'.csv', parse_dates=['Date'])\n",
+    "    df['Direction'] = df['Change'].apply(posOrNeg)\n",
+    "    df['Lag 1 Price'] = df['Price'].shift(-1)\n",
     "    df['Lag 2 Price'] = df['Price'].shift(-2)\n",
+    "    df['Lag 5 Price'] = df['Price'].shift(-2)\n",
+    "    df['Lag 1 Change'] = (df['Lag 1 Price'] - df['Price'])/df['Price']\n",
+    "    df['Lag 1 Direction'] = df['Lag 1 Change'].apply(posOrNeg)\n",
+    "    df['Lag 1 Significant'] = df['Lag 1 Change'].apply(bigPosOrNeg)\n",
     "    df['Lag 2 Change'] = (df['Lag 2 Price'] - df['Price'])/df['Price']\n",
     "    df['Lag 2 Direction'] = df['Lag 2 Change'].apply(posOrNeg)\n",
     "    df['Lag 2 Significant'] = df['Lag 2 Change'].apply(bigPosOrNeg)\n",
+    "    df['Lag 5 Change'] = (df['Lag 5 Price'] - df['Price'])/df['Price']\n",
+    "    df['Lag 5 Direction'] = df['Lag 5 Change'].apply(posOrNeg)\n",
+    "    df['Lag 5 Significant'] = df['Lag 5 Change'].apply(bigPosOrNeg)\n",
     "    df.to_csv(stock_dir+stock+'_Predict.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -97,11 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_VIX' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-9f20b47a9bb8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Lag 2 Price'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshift\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2 Day Change'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Lag 2 Price'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Price'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2 Day Direction'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2 Day Change'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mposOrNeg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2 Day Significant'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_VIX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2 Day Change'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbigPosOrNeg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_VIX' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data_VIX['Lag 2 Price'] = data_VIX['Price'].shift(-2)\n",
     "data_VIX['2 Day Change'] = (data_VIX['Lag 2 Price'] - data_VIX['Price'])/data_VIX['Price']\n",
